Codigo Ejemplo/1. Principios Universales de Diseño Software/1.3 Composicion vs Herencia/ejercicio/EmpresaEnvio/src/main/java/org/example/bad/EnvioNacionalPremiumConImpuesto.java
package org.example.bad;

public class EnvioNacionalPremiumConImpuesto extends EnvioNacionalPremium{
    @Override
    public double calcularCostoEnvio() {
        return super.calcularCostoEnvio() + 150;
    }
}
